<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comrat_page_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="#084563"
        >

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="60dp"
            android:layout_height="83dp"
            app:srcCompat="@drawable/arrow_white"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/description"
            />

        <TextView
            android:id="@+id/pageName"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/rating_and_comment"
            android:textColor="@color/white"
            android:textSize="24sp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/rateExperience"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="80dp"
            android:layout_marginTop="230dp"
            android:alpha="0.9"
            android:background="@drawable/buttons"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/rate_your_experience"
            android:textColor="#062635"
            android:textAlignment="center"
            android:fontFamily="@font/libre_baskerville"/>

        <Button
            android:id="@+id/leaveComment"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:alpha="0.9"
            android:background="@drawable/buttons"
            android:backgroundTint="@color/primaryColor"
            android:fontFamily="@font/libre_baskerville"
            android:text="@string/leave_a_comment"
            android:textColor="#062635" />

    </LinearLayout>

</LinearLayout>