<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_page_activity">

    <TextView
        android:id="@+id/pageName"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="#084563"
...
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/buttonList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:alpha="0.9"
            android:background="@drawable/buttons"
            android:backgroundTint="@color/primaryColor"
...
