...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/guide_linear_layout"
            android:layout_width="355dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:background="@drawable/frame"
            android:gravity="center_horizontal"
...
                android:gravity="start"
                android:text="@string/listTitle"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ListView
                android:id="@+id/listOfSSeings"
                android:layout_width="330dp"
                android:layout_height="153dp"
                android:layout_gravity="left"
                android:clipToPadding="false"
                android:dividerHeight="1dp"
                android:padding="16dp"
...
